improvement(index): completed initial layout
Generated by buildbootstrap.com

--- a/index.html
+++ b/index.html
@@ -32,45 +32,48 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6">
         WORLD CLASS HEADING
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6">
         WORLD CLASS IMAGE
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6">
         THE COMPANY HEADING
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6">
         THE COMPANY IMAGE
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
         GUEST 1
       </div>
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
         GUEST 2
       </div>
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
         GUEST 3
       </div>
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
         GUEST 4
       </div>
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
         GUEST 5
       </div>
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
         GUEST 6
       </div>
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
         GUEST 7
       </div>
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
         GUEST 8
+      </div>
+      <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
+        GUEST 9
       </div>
     </div>
     <div class="row">
@@ -79,10 +82,10 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-5">
         THE RESTAURANTS SLIDER
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-6 col-lg-7 col-xl-7">
         THE RESTAURANTS
       </div>
     </div>
