--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <title>Okada Manila NYE 2019</title>
+
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
 
@@ -22,12 +24,12 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         HERO SECTION
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         COUNTDOWN
       </div>
     </div>
@@ -77,7 +79,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         DAZZLING NIGHT SHOW
       </div>
     </div>
@@ -90,30 +92,30 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         COVE MANILA HERO
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         DJ SOLAII
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         DJ KAKA
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
         DJ CARLO
       </div>
-      <div class="col-xs-6">
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
         EVERYDAY PEOPLE
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         PRE-FOOTER
       </div>
     </div>
