--- a/index.html
+++ b/index.html
@@ -11,11 +11,7 @@
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
 
-  <!-- Bootstrap CSS -->
-  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
-    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous"> -->
-
-  <!-- Custom Styles -->
+  <!-- Main Style -->
   <link href="/stylesheets/style.min.css" rel="stylesheet" type="text/css" />
 
   <!--[if IE]>
@@ -25,12 +21,13 @@
 </head>
 
 <body>
-  <nav class="navbar bg-light justify-content-center">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-      <span class="navbar-toggler-icon">MENU</span>
+  <nav class="navbar navbar-light">
+    <a class="navbar-brand mx-auto" href="#">OKADA</a>
+    <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
+      data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
@@ -44,35 +41,35 @@
       </ul>
     </div>
   </nav>
-
   <div class="container">
-    <div class="row">
+    <div class="row hero-row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         HERO SECTION
       </div>
     </div>
-    <div class="row">
+    <div class="row countdown-row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         COUNTDOWN
+        <div id="clock"></div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6">
+    <div class="row world-class-row">
+      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6 heading-col">
         WORLD CLASS HEADING
       </div>
-      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6">
+      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col">
         WORLD CLASS IMAGE
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6">
+    <div class="row the-company-row">
+      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6 heading-col">
         THE COMPANY HEADING
       </div>
-      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6">
+      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col">
         THE COMPANY IMAGE
       </div>
     </div>
-    <div class="row">
+    <div class="row p-1">
       <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
         GUEST 1
       </div>
@@ -151,9 +148,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
     integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
-    integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
+  <script src="scripts/wow.min.js"></script>
 </body>
 
 </html>
