--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <!-- Main Style -->
   <link href="/stylesheets/style.min.css" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/animate.min.css" rel="stylesheet" type="text/css" />
 
   <!--[if IE]>
     <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
@@ -21,11 +22,13 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-light">
+  <nav id="navBar" class="navbar navbar-dark navbar-trans okada">
     <a class="navbar-brand mx-auto" href="#">OKADA</a>
     <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
       data-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
@@ -43,8 +46,11 @@
   </nav>
   <div class="container">
     <div class="row hero-row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        HERO SECTION
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-0">
+        <div class="grid">
+          <div class="image-2020 wow animated fadeIn delay-1s"></div>
+          <div class="image-hero-model wow animated fadeIn"></div>
+        </div>
       </div>
     </div>
     <div class="row countdown-row">
@@ -148,9 +154,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"
     integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4"
     crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-    crossorigin="anonymous"></script>
+  <script src="scripts/custom.min.js"></script>
   <script src="scripts/wow.min.js"></script>
 </body>
 
