--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
     </div>
     <div class="row countdown-row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        COUNTDOWN
-        <div id="clock"></div>
+        <div id="countdown" class="countdown-container"></div>
       </div>
     </div>
     <div class="row world-class-row">
