style(sass, countdown): typography test

--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
     <div class="row countdown-row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div id="countdown" class="countdown-container"></div>
+
+        <div class="okada-hero">
+          <h1 class="okada-hero-heading">
+            Okada Manila is taking its New Year’s Eve celebrations to bigger, more extravagant levels.
+          </h1>
+          <p class="okada-hero-caption">
+            It’s a full explosion of spectacular performances and special treats that will make this night of partying
+            the
+            metro’s most unforgettable one.
+          </p>
+        </div>
       </div>
     </div>
     <div class="row world-class-row">
