improvement(index, responsive, sass): mobile-first styling with assets provided

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
 <body>
   <nav id="navBar" class="navbar navbar-dark navbar-trans okada">
-    <a class="navbar-brand mx-auto" href="#">OKADA</a>
+    <a class="navbar-brand mx-auto" href="#">
+      <img src="images/okada-logo-small.png" width="41" />
+    </a>
     <button class="navbar-toggler navbar-toggler-right border-0" type="button" data-toggle="collapse"
       data-target="#collapsibleNavbar">
       <span class="line"></span>
@@ -33,18 +35,18 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Guests</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">The Fountain</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">Cove Manila</a>
         </li>
       </ul>
     </div>
   </nav>
-  <div class="container">
+  <div class="container main-container">
     <div class="row hero-row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-0">
         <div class="grid">
@@ -71,55 +73,133 @@
     </div>
     <div class="row world-class-row">
       <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6 heading-col">
-        WORLD CLASS HEADING
+        <h1 class="okada-hero-heading">
+          WORLD CLASS ENTERTAINMENT
+        </h1>
+        <p class="okada-hero-caption">
+          At Okada Manila, Entertainment is paramount to the complete guest experience.
+        </p>
       </div>
       <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col">
-        WORLD CLASS IMAGE
+        <div class="grid">
+          <div class="world-class-image-1"></div>
+          <div class="world-class-image-2"></div>
+          <div class="world-class-image-3"></div>
+        </div>
       </div>
     </div>
     <div class="row the-company-row">
+      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
       <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6 heading-col">
-        THE COMPANY HEADING
-      </div>
-      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col">
-        THE COMPANY IMAGE
-      </div>
-    </div>
-    <div class="row p-1">
-      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
-        GUEST 1
-      </div>
-      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
-        GUEST 2
-      </div>
-      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
-        GUEST 3
-      </div>
-      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
-        GUEST 4
-      </div>
-      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
-        GUEST 5
-      </div>
-      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
-        GUEST 6
-      </div>
-      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
-        GUEST 7
-      </div>
-      <div class="col-xs-6 col-md-4 col-lg-4 col-xl-4">
-        GUEST 8
-      </div>
-      <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
-        GUEST 9
+        <p class="okada-hero-caption">
+          The CompanY. Asia’s premiere vocal harmony act was formed in July, 1985 by alumni of the Ateneo College Glee
+          Club. Initially, they sang as back up vocalists for the country's reigning pop stars of the '80's before
+          turning professional as the headlining concert and recording artists that they are today.
+        </p>
+
+        <img class="image the-company-group" src="images/the-company-group@2x.png" />
       </div>
     </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        DAZZLING NIGHT SHOW
+    <div class="row guests-row justify-content-between align-content-around">
+      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+        <div class="guest-info-container">
+          <div class="guest-image bugoy-drilon"></div>
+          <div class="guest-info">
+            <h6 class="guest-name">Bugoy Drilon</h6>
+            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+        <div class="guest-info-container">
+          <div class="guest-image daryl-ong"></div>
+          <div class="guest-info">
+            <h6 class="guest-name">Daryl Ong</h6>
+            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+        <div class="guest-info-container">
+          <div class="guest-image michael-pangilinan"></div>
+          <div class="guest-info">
+            <h6 class="guest-name">Michael Pangilinan</h6>
+            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+        <div class="guest-info-container">
+          <div class="guest-image liezel-garcia"></div>
+          <div class="guest-info">
+            <h6 class="guest-name">Liezel Garcia</h6>
+            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+        <div class="guest-info-container">
+          <div class="guest-image erik-santos"></div>
+          <div class="guest-info">
+            <h6 class="guest-name">Erik Santos</h6>
+            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+        <div class="guest-info-container">
+          <div class="guest-image mayonnaise"></div>
+          <div class="guest-info">
+            <h6 class="guest-name">Mayonnaise</h6>
+            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+        <div class="guest-info-container">
+          <div class="guest-image udd"></div>
+          <div class="guest-info">
+            <h6 class="guest-name">UDD</h6>
+            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+        <div class="guest-info-container">
+          <div class="guest-image the-ransom-collective"></div>
+          <div class="guest-info">
+            <h6 class="guest-name">The Ransom Collective</h6>
+            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          </div>
+        </div>
+      </div>
+      <div class="guest-entry col-6 col-sm-6 col-md-4 col-lg-4 col-xl-4">
+        <div class="guest-info-container">
+          <div class="guest-image bugoy-drilon"></div>
+          <div class="guest-info">
+            <h6 class="guest-name">Jason Dy</h6>
+            <p class="guest-name-info">Nunc dignissim vehicula lorem. Fusce eu congue tellus.</p>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="row">
+    <div class="row night-show-row">
+      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 night-show-col">
+        <div class="night-show-logo"></div>
+        <div class="night-show-details">
+          <h1 class="dazzling">
+            A DAZZLING LIGHT SHOW AT THE FOUNTAIN
+          </h1>
+          <p class="dazzling-details">
+            The Fountain stands as Okada Manila’s bold take on creating a global icon.
+          </p>
+          <button type="button" class="btn btn-dark btn-dazzling">
+            LEARN MORE
+          </button>
+        </div>
+      </div>
+    </div>
+    <div class="row the-restaurants-row">
       <div class="col-xs-12 col-md-4 col-lg-5 col-xl-5">
         THE RESTAURANTS SLIDER
       </div>
@@ -127,33 +207,51 @@
         THE RESTAURANTS
       </div>
     </div>
-    <div class="row">
+    <div class="row cove-manila-row text-center">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        COVE MANILA HERO
+        <div class="cove-manila-logo mx-auto"></div>
+        <p class="cove-manila-logo-caption">
+          LITERALLY THE LAST PARTY OF THE YEAR
+        </p>
+        <!-- <div class="row p-0"><div class="col-12"></div></div> -->
       </div>
     </div>
-    <div class="row">
+    <div class="row cove-manila-row-1">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        DJ SOLAII
+        <div class="row cove-manila-row-1-sub-1">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            DJ SOLAII
+          </div>
+        </div>
+        <div class="row cove-manila-row-1-sub-2">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            DJ KAKA
+          </div>
+        </div>
       </div>
     </div>
-    <div class="row">
+    <!-- <div class="row cove-manila-row-2">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         DJ KAKA
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+    </div> -->
+    <div class="row cove-manila-row-2">
+      <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6">
         DJ CARLO
       </div>
-      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
+      <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6">
         EVERYDAY PEOPLE
       </div>
-    </div>
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        PRE-FOOTER
+      <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        <div class="row cove-manila-row-2-sub-1">
+          <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            PRE-FOOTER
+          </div>
+        </div>
       </div>
+    </div>
+    <div class="row footer-row">
+
     </div>
   </div>
   <!-- Optional JavaScript -->
