improvement(refactoring, world-class, sass): world-class section styling, refactoring for fluid cont
World class section styling. Refactoring codes for container-fluid

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </ul>
     </div>
   </nav>
-  <div class="container main-container">
+  <div class="container-fluid main-container">
     <div class="row hero-row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-0">
         <div class="grid">
@@ -80,13 +80,7 @@
           At Okada Manila, Entertainment is paramount to the complete guest experience.
         </p>
       </div>
-      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col">
-        <div class="grid">
-          <div class="world-class-image-1"></div>
-          <div class="world-class-image-2"></div>
-          <div class="world-class-image-3"></div>
-        </div>
-      </div>
+      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
     </div>
     <div class="row the-company-row">
       <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
