feat(wow, animation): wow.js test with anti flickering

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
     </div>
     <div class="row countdown-row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div id="countdown" class="countdown-container"></div>
+        <div id="countdown" class="countdown-container">
+          <div class="number-of days wow fadeInDown animated" data-wow-delay="0.2s"></div>
+          <div class="number-of hours wow fadeInDown animated" data-wow-delay="0.4s"></div>
+          <div class="number-of minutes wow fadeInDown animated" data-wow-delay="0.6s"></div>
+          <div class="number-of seconds wow fadeInDown animated" data-wow-delay="0.8s"></div>
+        </div>
 
         <div class="okada-hero">
           <h1 class="okada-hero-heading">
