--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
   <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
   <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/swiper.min.css" rel="stylesheet" type="text/css" />
 
   <!-- Main Style -->
   <link href="/stylesheets/style.min.css" rel="stylesheet" type="text/css" />
@@ -200,7 +201,23 @@
     </div>
     <div class="row the-restaurants-row">
       <div class="col-xs-12 col-md-4 col-lg-5 col-xl-5">
-        THE RESTAURANTS SLIDER
+        <!-- Swiper -->
+        <div id="theRestaurantsSlider" class="swiper-container">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">Slide 6</div>
+            <div class="swiper-slide">Slide 7</div>
+            <div class="swiper-slide">Slide 8</div>
+            <div class="swiper-slide">Slide 9</div>
+            <div class="swiper-slide">Slide 10</div>
+          </div>
+          <!-- Add Pagination -->
+          <div class="swiper-pagination"></div>
+        </div>
       </div>
       <div class="col-xs-12 col-md-6 col-lg-7 col-xl-7">
         THE RESTAURANTS
