style(the-restaurants): the restaurants initial slider

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     <div class="row countdown-row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div id="countdown" class="countdown-container">
-          <div class="number-of days wow fadeInDown animated" data-wow-delay="0.2s"></div>
-          <div class="number-of hours wow fadeInDown animated" data-wow-delay="0.4s"></div>
-          <div class="number-of minutes wow fadeInDown animated" data-wow-delay="0.6s"></div>
-          <div class="number-of seconds wow fadeInDown animated" data-wow-delay="0.8s"></div>
+          <div class="number-of days wow fadeInDown animated" data-wow-delay="0.2s">00</div>
+          <div class="number-of hours wow fadeInDown animated" data-wow-delay="0.4s">00</div>
+          <div class="number-of minutes wow fadeInDown animated" data-wow-delay="0.6s">00</div>
+          <div class="number-of seconds wow fadeInDown animated" data-wow-delay="0.8s">00</div>
         </div>
 
         <div class="okada-hero">
@@ -82,7 +82,7 @@
         <h1 class="okada-hero-heading">
           WORLD CLASS ENTERTAINMENT
         </h1>
-        <p class="okada-hero-caption">
+        <p class="okada-hero-caption text-center">
           At Okada Manila, Entertainment is paramount to the complete guest experience.
         </p>
       </div>
@@ -92,7 +92,7 @@
       <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
       <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6 heading-col">
         <p class="okada-hero-caption">
-          The CompanY. Asia’s premiere vocal harmony act was formed in July, 1985 by alumni of the Ateneo College Glee
+          The Company. Asia’s premiere vocal harmony act was formed in July, 1985 by alumni of the Ateneo College Glee
           Club. Initially, they sang as back up vocalists for the country's reigning pop stars of the '80's before
           turning professional as the headlining concert and recording artists that they are today.
         </p>
@@ -200,27 +200,42 @@
       </div>
     </div>
     <div class="row the-restaurants-row">
-      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-5">
+      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-5 p-0">
         <!-- Swiper -->
         <div id="theRestaurantsSlider" class="swiper-container">
           <div class="swiper-wrapper">
-            <div class="swiper-slide">Slide 1</div>
-            <div class="swiper-slide">Slide 2</div>
-            <div class="swiper-slide">Slide 3</div>
-            <div class="swiper-slide">Slide 4</div>
-            <div class="swiper-slide">Slide 5</div>
-            <div class="swiper-slide">Slide 6</div>
-            <div class="swiper-slide">Slide 7</div>
-            <div class="swiper-slide">Slide 8</div>
-            <div class="swiper-slide">Slide 9</div>
-            <div class="swiper-slide">Slide 10</div>
+            <div class="swiper-slide">
+              <img class="swiper-image" src="images/the-restaurants-1.png" />
+            </div>
+            <div class="swiper-slide">
+              <img class="swiper-image" src="images/the-restaurants-1.png" />
+            </div>
+            <div class="swiper-slide">
+              <img class="swiper-image" src="images/the-restaurants-1.png" />
+            </div>
+            <div class="swiper-slide">
+              <img class="swiper-image" src="images/the-restaurants-1.png" />
+            </div>
           </div>
           <!-- Add Pagination -->
           <div class="swiper-pagination"></div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6 col-lg-7 col-xl-7">
-        THE RESTAURANTS
+      <div class="col-xs-12 col-md-6 col-lg-7 col-xl-7 the-restaurants-col">
+        <div class="the-restaurants-logo">
+          THE RESTAURANTS LOGO PLACEHOLDER
+        </div>
+        <h1 class="the-restaurants-heading">
+          A feast of the finest holiday flavors
+        </h1>
+        <p class="okada-hero-caption text-left">
+          Spread the holiday cheer with family and friends only at Okada Manila's signature restaurants.
+          <br /><br />
+          November 4 — January 4
+        </p>
+        <button type="button" class="btn btn-dark btn-dazzling dazzling-text">
+          LEARN MORE
+        </button>
       </div>
     </div>
     <div class="row cove-manila-row text-center">
@@ -235,13 +250,37 @@
     <div class="row cove-manila-row-1">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row cove-manila-row-1-sub-1">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 featured-dj-1">
             DJ SOLAII
           </div>
         </div>
         <div class="row cove-manila-row-1-sub-2">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-            DJ KAKA
+          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 featured-dj-2 p-0">
+            <div class="dj-kaka grid-container">
+              <div class="dj-kaka-head-wrapper">
+                <div class="dj-kaka-head"></div>
+              </div>
+              <div class="dj-kaka-details-wrapper">
+                <div class="dj-kaka-details-container">
+                  <div class="dj-kaka-details">
+                    <h1 class="dj-kaka-name">
+                      DJ<br />
+                      KAKA
+                    </h1>
+                    <p class="dj-kaka-desc">
+                      Express your feelings on the dancefloor with DJ Kaka's spine tingling music. Be zapped and stunned
+                      as
+                      we roll through a night of electronic dance music.
+                    </p>
+                  </div>
+                </div>
+                <div class="dj-kaka-button-container">
+                  <a href="#" class="btn visit-channel-button" target="_blank">
+                    <h2 class="visit-channel-text">VISIT CHANNEL</h2>
+                  </a>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
