--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 featured-dj-2 p-0">
             <div class="dj-kaka grid-container">
               <div class="dj-kaka-head-wrapper">
-                <div class="dj-kaka-head"></div>
+                <img class="dj-kaka-head" src="images/dj-kaka.png" />
               </div>
               <div class="dj-kaka-details-wrapper">
                 <div class="dj-kaka-details-container">
@@ -275,7 +275,8 @@
                   </div>
                 </div>
                 <div class="dj-kaka-button-container">
-                  <a href="#" class="btn visit-channel-button" target="_blank">
+                  <a href="#" class="btn visit-channel-button wow animated fadeIn fast" data-wow-delay="0.3"
+                    target="_blank">
                     <h2 class="visit-channel-text">VISIT CHANNEL</h2>
                   </a>
                 </div>
