improvement(index, cove-manila, the-restaurants, grid): cove manila styling (mobile first), etc
Cove Manila styling. Fixes for smaller devices (as the xs breakpoint was already removed on BS 4),
The Fountain padding fixes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
 
   <title>Okada Manila NYE 2019</title>
 
@@ -49,7 +49,7 @@
   </nav>
   <div class="container-fluid main-container">
     <div class="row hero-row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 p-0">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12 p-0">
         <div class="grid">
           <div class="image-2020 wow animated fadeIn delay-1s"></div>
           <div class="image-hero-model wow animated fadeIn"></div>
@@ -57,7 +57,7 @@
       </div>
     </div>
     <div class="row countdown-row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div id="countdown" class="countdown-container">
           <div class="number-of days wow fadeInDown animated" data-wow-delay="0.2s">00</div>
           <div class="number-of hours wow fadeInDown animated" data-wow-delay="0.4s">00</div>
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="row world-class-row">
-      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6 heading-col">
+      <div class="col-12 col-md-4 col-lg-5 col-xl-6 heading-col">
         <h1 class="okada-hero-heading">
           WORLD CLASS ENTERTAINMENT
         </h1>
@@ -86,11 +86,11 @@
           At Okada Manila, Entertainment is paramount to the complete guest experience.
         </p>
       </div>
-      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
+      <div class="col-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
     </div>
     <div class="row the-company-row">
-      <div class="col-xs-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
-      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-6 heading-col">
+      <div class="col-12 col-md-8 col-lg-7 col-xl-6 image-col"></div>
+      <div class="col-12 col-md-4 col-lg-5 col-xl-6 heading-col">
         <p class="okada-hero-caption">
           The Company. Asia’s premiere vocal harmony act was formed in July, 1985 by alumni of the Ateneo College Glee
           Club. Initially, they sang as back up vocalists for the country's reigning pop stars of the '80's before
@@ -184,7 +184,7 @@
       </div>
     </div>
     <div class="row night-show-row">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 night-show-col">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12 night-show-col">
         <div class="night-show-logo"></div>
         <div class="night-show-details">
           <h1 class="dazzling">
@@ -200,7 +200,7 @@
       </div>
     </div>
     <div class="row the-restaurants-row">
-      <div class="col-xs-12 col-md-4 col-lg-5 col-xl-5 p-0">
+      <div class="col-12 col-md-4 col-lg-5 col-xl-5 p-0">
         <!-- Swiper -->
         <div id="theRestaurantsSlider" class="swiper-container">
           <div class="swiper-wrapper">
@@ -221,7 +221,7 @@
           <div class="swiper-pagination"></div>
         </div>
       </div>
-      <div class="col-xs-12 col-md-6 col-lg-7 col-xl-7 the-restaurants-col">
+      <div class="col-12 col-md-6 col-lg-7 col-xl-7 the-restaurants-col">
         <div class="the-restaurants-logo"></div>
         <h1 class="the-restaurants-heading">
           A feast of the finest holiday flavors
@@ -237,7 +237,7 @@
       </div>
     </div>
     <div class="row cove-manila-row text-center">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="cove-manila-logo mx-auto"></div>
         <p class="cove-manila-logo-caption">
           LITERALLY THE LAST PARTY OF THE YEAR
@@ -245,10 +245,9 @@
       </div>
     </div>
     <div class="row cove-manila-row-1">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row cove-manila-row-1-sub-1">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 featured-dj-1 wow animated fadeInUp"
-            data-wow-delay="0.5s">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12 featured-dj-1 wow animated fadeInUp" data-wow-delay="0.5s">
             <div class="row dj-solaii-wrapper">
               <div class="col-7 dj-solaii-head"></div>
               <div class="col-5 dj-solaii-details">
@@ -270,7 +269,7 @@
           </div>
         </div>
         <div class="row cove-manila-row-1-sub-2">
-          <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 featured-dj-2 p-0">
+          <div class="col-12 col-sm-12 col-md-12 col-lg-12 featured-dj-2 p-0">
             <div class="dj-kaka grid-container">
               <div class="dj-kaka-head-wrapper wow animated fadeInLeft" data-wow-delay="0.9s">
                 <img class="dj-kaka-head" src="images/dj-kaka.png" />
@@ -301,21 +300,28 @@
         </div>
       </div>
     </div>
-    <!-- <div class="row cove-manila-row-2">
-      <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        DJ KAKA
-      </div>
-    </div> -->
     <div class="row cove-manila-row-2">
-      <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        DJ CARLO
+      <div class="col-6 col-12 col-sm-6 col-md-6 col-lg-6 featured-dj-below">
+        <div class="featured-dj-below-profile carlo-atendido wow animated fadeInDown" data-wow-delay="0.1s">
+          <div class="featured-dj-below-profile-image"></div>
+          <div class="featured-dj-below-profile-details">
+            <p class="featured-dj-name">Carlo Atendido</p>
+            <p class="featured-dj-name-desc">Resident Cove Manila DJ</p>
+          </div>
+        </div>
       </div>
-      <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6">
-        EVERYDAY PEOPLE
+      <div class="col-6 col-12 col-sm-6 col-md-6 col-lg-6 featured-dj-below">
+        <div class="featured-dj-below-profile everyday-people wow animated fadeInDown" data-wow-delay="0.2s">
+          <div class="featured-dj-below-profile-image"></div>
+          <div class="featured-dj-below-profile-details">
+            <p class="featured-dj-name">Everyday People</p>
+            <p class="featured-dj-name-desc">Cove Manila NYE DJs</p>
+          </div>
+        </div>
       </div>
-      <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="col-12 col-12 col-sm-12 col-md-12 col-lg-12">
         <div class="row cove-manila-row-2-sub-1">
-          <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12">
+          <div class="col-12 col-12 col-sm-12 col-md-12 col-lg-12">
             PRE-FOOTER
           </div>
         </div>
